# tessera

./: .gitignore  .gitleaks.toml  .zizmor.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  trivy.yaml
.github/: CICD_CONTRACT.md  dependabot.yml
.github/actions/harden-setup/: action.yml
.github/workflows/: _fragment-sbom.md  cdk.yml  ci-lint.yml  control-plane-cron.yml  deploy-site.yml  destroy.yml  infracost.yml  nightly.yml  policy-ci.yml  pr-ephemeral.yml  pr-teardown.yml  pr-validate.yml  release.yml  reusable-attest.yml  scim-conformance.yml  scorecard.yml  secret-scan.yml  terraform.yml
bootstrap/: .gitignore  .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
bootstrap/tests/: ci_trust.tftest.hcl
cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lambda/reaper/: index.mjs
cdk/lib/: access-review-stack.ts  reaper-stack.ts
cdk/test/: access-review-stack.test.ts  app.test.ts  reaper-stack.test.ts
cdk/test/__snapshots__/: access-review-stack.test.ts.snap
control-plane/: README.md  go.mod
control-plane/cmd/access-review/: main.go
control-plane/cmd/offboard/: main.go
control-plane/docs/: cron.md
control-plane/internal/audit/: audit.go  audit_test.go
control-plane/internal/cli/: run.go  run_test.go
control-plane/internal/domain/: identity.go  identity_test.go  lifecycle.go  lifecycle_test.go
control-plane/internal/federation/: aws.go  aws_test.go  azure.go  azure_test.go  gcp.go  gcp_test.go  idp.go  idp_test.go  orchestrator.go  orchestrator_test.go
control-plane/internal/lifecycle/: joiner.go  joiner_test.go  mover.go  mover_test.go
docs/: API.md  CONFIGURATION.md  DATA-MODEL.md  DEPLOYMENT.md  OPERATIONS.md  README.md  STANDARDS.md  TESTING.md  THREAT-MODEL.md  deploy.md  iac.md  openapi.yaml  perf-a11y-gate.md  policy.md  reaper.md
docs/adr/: 0001-edge-engine-rust-wasm-cloudflare-workers.md  0002-native-go-control-plane-not-tinygo-workers.md  0003-regorus-rust-native-rego-not-opa-wasm.md  0004-dual-signing-algorithms-eddsa-rs256.md  0005-oidc-first-saml-brokered-no-hand-rolled-xml-dsig.md  0006-opaque-sessions-durable-object-not-stateless-jwt.md  0007-keyless-multi-cloud-federation-oidc-trust-sts.md  0008-federate-authenticated-internal-endpoint.md  0009-role-centric-rbac-a-abac-narrows.md  0010-static-first-astro-r3f-accessible-svg-fallback.md  0011-terraform-owns-trust-plane-cdk-owns-aws-slice.md  0012-audit-log-append-only-hash-chained-r2-worm.md  README.md
edge/: Cargo.toml  README.md  wrangler.jsonc
edge/.cargo/: audit.toml
edge/docs/: saml-broker.md
edge/migrations/: 0002_scim.sql
edge/src/: authz.rs  decision_log.rs  discovery.rs  dpop.rs  federation.rs  fetcher.rs  internal_token.rs  introspect.rs  jwks.rs  jwt.rs  lib.rs  rp.rs  session.rs  session_do.rs  ssrf.rs  util.rs  webcrypto_rsa.rs
edge/src/authz/: bundle.rs  conformance.rs  decision_log.rs  engine.rs  mod.rs
edge/src/scim/: auth.rs  d1_store.rs  dialect.rs  discovery.rs  error.rs  filter.rs  handlers.rs  mod.rs  model.rs  page.rs  patch.rs  router.rs  service.rs  store.rs
edge/src/telemetry/: aggregator.rs  emit.rs  event.rs  mod.rs  sse.rs
edge/tests/: conformance.rs
edge/tests/fixtures/: bundle.json  bundle.sig  entra_patch_flag.json  entra_patch_noflag.json  entra_test_connection_note.md  okta_create.json  okta_group_member_add.json  okta_group_member_remove.json  pubkey.hex
policy/: .gitignore  Makefile  README.md
policy/.regal/: config.yaml
policy/authz/: abac.rego  abac_data.json  abac_fixture.json  abac_test.rego  allow_test.rego  main.rego  main_test.rego  rbac.rego  rbac_data.json  rbac_fixture.json  rbac_test.rego  sod.rego  sod_data.json  sod_fixture.json  sod_test.rego  vectors_test.rego
policy/conformance/: vectors.json
policy/iac/: .manifest  trust.rego  trust_test.rego
policy/tools/: sign_bundle.py
site/: .gitignore  README.md  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
site/src/: content.config.ts  env.d.ts
site/tests/: a11y.spec.ts  best-practices.spec.ts  home.spec.ts  standards.spec.ts  telemetry-live.spec.ts
terraform/: .terraform.lock.hcl  README.md  backend.tf  infracost-usage.yml  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
terraform/policy/: federation.rego  federation_test.rego  trust.rego
terraform/tests/: cost_guardrail.test.sh  root_composition.tftest.hcl  scaffold.tftest.hcl
(+124 files in other folders)
