[package]
name = "edge"
version = "0.1.0"
edition = "2021"
authors = ["Lifecycle"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ["http", "d1"] }
worker-macros = "0.8"
web-sys = { version = "0.3", features = ["WorkerGlobalScope", "Crypto", "SubtleCrypto", "CryptoKey", "CryptoKeyPair"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
jsonwebtoken = { version = "10.4", default-features = false, features = ["use_pem", "rust_crypto"] }
# `pem` is required for `to_pkcs8_pem`/`to_public_key_pem` (the `pkcs8` feature
# alone only provides DER); `pem` transitively enables `alloc` + `pkcs8`.
ed25519-dalek = { version = "2.2", default-features = false, features = ["rand_core", "pkcs8", "pem", "zeroize"] }
# NOTE: RS256 *verification* is provided by jsonwebtoken's `rust_crypto` backend
# (DecodingKey::from_rsa_pem); RS256 *signing* is done via WebCrypto (Task 5).
pasetors = { version = "0.7", default-features = false, features = ["std", "v4", "paserk"] }
oauth2 = { version = "5.0", default-features = false }
openidconnect = { version = "4.0", default-features = false }
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
